# Text2SQL-Agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.ci  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
components/: chat.py  sidebar.py  styles.py
models/: column_profile.py  pipeline_result.py  semantic_layer.py
pipeline/: ingestion_pipeline.py  query_pipeline.py
prompts/: answer_prompt.md  sql_prompt.md
service/: answer_generation_service.py  chart_service.py  chunking_service.py  dataframe_service.py  ddl_service.py  llm_service.py  profiler_service.py  prompt_builder_service.py  retriever_service.py  semantic_layer_service.py  sql_execution_service.py  sql_generation_service.py  sqlite_service.py  training_doc_service.py  upload_service.py  vector_store_service.py
tests/: test_components.py
utils/: logger.py  sql_utils.py
