[project]
name = "text2sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.12.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=0.3.10",
    "langchain-text-splitters>=1.1.2",
    "markdown==3.8.2",
    "numpy==2.3.2",
    "ollama==0.5.3",
    "openpyxl==3.1.5",
    "pandas==2.3.2",
    "plotly==6.3.0",
    "pydantic==2.11.7",
    "pytest>=9.1.1",
    "python-dotenv==1.1.1",
    "rapidfuzz==3.14.1",
    "sentence-transformers==5.1.0",
    "sqlalchemy==2.0.43",
    "streamlit==1.49.1",
    "tabulate==0.9.0",
    "tenacity>=9.1.4",
    "tiktoken==0.11.0",
    "torch>=2.7.0",
    "tqdm==4.67.1",
    "transformers==4.56.0",
    "xlrd==2.0.2",
]
